tf-files/modules/launch_temp.tf
resource "aws_launch_template" "asg-lt" {
  name = "phonebook-lt"

  image_id = data.aws_ami.amazon-linux-2.id
  instance_type = "t2.micro"
  key_name = var.key-name
  vpc_security_group_ids = [aws_security_group.server-sg2.id]
  user_data = base64encode(data.template_file.phonebook.rendered)
  depends_on = [github_repository_file.dbendpoint]
  tag_specifications {
    resource_type = "instance"
    tags = {
      Name = "Web Server of Phonebook App"
    }
  }
}
